# simplegui

./: CMakeLists.txt  README.md  SGtest.pro  filebrowser.h  main.cpp  message.h  messagebox.h  simplegui.dox  simplegui.h  simplegui.pro  test.cpp  test00-helloworld.cpp  test01-packager.cpp  test02-registerform.cpp  test03-library.cpp  test04-numericpad.cpp  test05-filescanner.cpp
